--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,10 @@
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "express": "^4.18.2",
+    "socket.io": "^4.7.4"
   }
 }
