--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "prestart": "npm run build",
-    "start": "concurrently --kill-others \"npm run watch\" \"nodemon .\""
+    "dev": "concurrently --kill-others \"npm run watch\" \"nodemon .\""
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.4"
   }
