--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "uuid": "^9.0.1"
   }
 }
